[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "legacycrypt"
author = "Christian Heimes"
author-email = "christian@python.org"
maintainer = "Christian Heimes"
maintainer-email = "christian@python.org"
home-page = "https://github.com/tiran/legacycrypt"
description-file = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: POSIX",
    "Topic :: Security :: Cryptography"
]
# 3.5 for pypy3. It supports f"" but not 10_000.
requires-python = ">=3.5"
